--- a/productservice/src/main/resources/application.properties
+++ b/productservice/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.url=jdbc:mysql://docker-mysql:3306/mydb
 spring.datasource.username=root
 spring.datasource.password=r0oT1727
 
 server.port=9090
 
-couponService.url=http://localhost:9091/couponapi/coupons/
+couponService.url=http://coupon-app:9091/couponapi/coupons/
