--- a/docker-compose-demos/1-httpd/docker-compose.yml
+++ b/docker-compose-demos/1-httpd/docker-compose.yml
@@ -3,5 +3,12 @@ services:
   web:
     image: httpd
     container_name: mywebserver
+    networks:
+      - webnetwork
     ports:
       - "8080:80"
+networks:
+  webnetwork:
+    driver: bridge
+  dbnetwork:
+    driver: bridge
