Pod phases, labels, selectors, dry run, export, krew, neat, explain

--- a/kubernetes/firstpod.yml
+++ b/kubernetes/firstpod.yml
@@ -2,6 +2,10 @@ kind: Pod
 apiVersion: v1
 metadata:
   name: firstpod
+  labels:
+    app: fp
+    release: stable
+    team: red
 spec:
   containers:
     - name: web
