--- a/kubernetes/webserver/webserver.yml
+++ b/kubernetes/webserver/webserver.yml
@@ -5,7 +5,12 @@ metadata:
   labels:
     app: httpd
 spec:
-  replicas: 2
+  replicas: 10
+  strategy: 
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 3
+      maxUnavailable: 4
   selector: 
     matchLabels: 
       app: httpd
