rolling updates, rollbacks and manual scaling

--- a/kubernetes/webserver/webserver.yml
+++ b/kubernetes/webserver/webserver.yml
@@ -21,7 +21,7 @@ spec:
     spec:
       containers:
         - name: myhttpd
-          image: httpd
+          image: httpd:2
           ports:
             - containerPort: 80
               
